# fmincon-ROScpp

./: CMakeLists.txt  README.md
ros_fmincon/: CMakeLists.txt  package.xml
ros_fmincon/src/: BFGS.cpp  Powell.cpp  Powell_modified.cpp  Rosenbrock.cpp  fmincon.cpp
ros_fmincon/src/examples/: example_with_gra.cpp  example_without_gra.cpp
