<?xml version="1.0"?>
<package format="2">
  <name>ros_fmincon</name>
  <version>0.0.0</version>
  <description>The ros_fmincon package</description>

  <maintainer email="legion_rospc@todo.todo">legion_rospc</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>armadillo</build_depend>      
  <exec_depend>armadillo</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
